[gd_scene load_steps=7 format=3 uid="uid://6cptows5nsga"]

[ext_resource type="Script" path="res://GUI/generate_profile.gd" id="1_sy2vv"]
[ext_resource type="Shader" path="res://GUI/CircularIcon.gdshader" id="1_wpnr1"]
[ext_resource type="Texture2D" uid="uid://d3rf6aw43rb02" path="res://assets/DefaultProfilePic.jpeg" id="2_shib6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qd543"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.137255, 0.137255, 0.137255, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.92549, 0.796078, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="LabelSettings" id="LabelSettings_aa2am"]
font_size = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3m336"]
shader = ExtResource("1_wpnr1")

[node name="generateProfile" type="Window"]
initial_position = 2
size = Vector2i(500, 300)
borderless = true
script = ExtResource("1_sy2vv")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qd543")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Space" type="Control" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Generate New Profile"
label_settings = SubResource("LabelSettings_aa2am")
horizontal_alignment = 1

[node name="Space3" type="Control" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Pic" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 4

[node name="icon" type="TextureRect" parent="PanelContainer/VBoxContainer/Pic"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_3m336")
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_shib6")
expand_mode = 2

[node name="Space2" type="Control" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="IPLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 2

[node name="UsernameLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Username :"

[node name="username" type="LineEdit" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Save" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Save"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
size = Vector2i(800, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.jpg", "*.jpeg", "*.png", "*.webp", "*.bmp", "*.ktx", "*.svg", "*.tga")

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="gui_input" from="PanelContainer/VBoxContainer/Pic/icon" to="." method="_on_profile_rect_gui_input"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
